fix styles on tablet

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,7 @@
 .header {
   --header-anim-delay: 1s;
   --header-anim-delay-offset: 0.2s;
-  background-color: var(--background-color-light);
+  // background-color: var(--background-color-light);
   padding: 32px 0;
   position: sticky;
   top: 0;
